--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,33 @@
 name: Continuous Integration
- 
+
 on: 
   pull_request:
     branches:
       - main
- 
+
 jobs:
   test:
     runs-on: ubuntu-latest
- 
+
     strategy:
       matrix:
         node-version: [14.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
- 
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: supersecret
+          POSTGRES_DB: auth_api
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -27,15 +41,15 @@ jobs:
         npm run test
       env:
         CI: true
-        PGHOST_TEST: ${{ secrets.PGHOST_TEST }}
-        PGUSER_TEST: ${{ secrets.PGUSER_TEST }}
-        PGDATABASE_TEST: ${{ secrets.PGDATABASE_TEST }}
-        PGPASSWORD_TEST: ${{ secrets.PGPASSWORD_TEST }}
-        PGPORT_TEST: ${{ secrets.PGPORT_TEST }}
-        PGHOST: ${{ secrets.PGHOST_TEST }}
-        PGUSER: ${{ secrets.PGUSER_TEST }}
-        PGDATABASE: ${{ secrets.PGDATABASE_TEST }}
-        PGPASSWORD: ${{ secrets.PGPASSWORD_TEST }}
-        PGPORT: ${{ secrets.PGPORT_TEST }}
+        PGHOST_TEST: localhost
+        PGUSER_TEST: postgres
+        PGDATABASE_TEST: auth_api
+        PGPASSWORD_TEST: supersecret
+        PGPORT_TEST: 5432
+        PGHOST: localhost
+        PGUSER: postgres
+        PGDATABASE: auth_api
+        PGPASSWORD: supersecret
+        PGPORT: 5432
         ACCESS_TOKEN_KEY: ${{ secrets.ACCESS_TOKEN_KEY }}
         REFRESH_TOKEN_KEY: ${{ secrets.REFRESH_TOKEN_KEY }}
